<resources>
    <string name="app_name">MzansiReady</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="isi_zulu">IsiZulu</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="have_account_login">Already have an account? Login</string>
    <string name="create_account">Create account</string>
</resources>